fix: menu display on mobile devices

--- a/src/Components/NavigationBar/navbar.css
+++ b/src/Components/NavigationBar/navbar.css
@@ -34,18 +34,17 @@
 .menu {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     font-size: 1.2em;
     list-style: none;
+    width: 100%;
     gap: 2em;
 }
 
 .menu_item {
-    display: grid;
-    place-items: center;
     width: 100%;
-    padding: .5em;
+    padding: 0;
 }
 
 .menu_link {
@@ -73,9 +72,6 @@
     padding: 1.5em;
 }
 
-
-
-
 @keyframes flash {
     0% {
         opacity: 1;
@@ -90,9 +86,12 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 588px) {
     .menu_item {
         width: fit-content;
+        display: grid;
+        place-items: center;
+
     }
 }
 
