--- a/src/Components/movementDetail/styles.css
+++ b/src/Components/movementDetail/styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-self: center;
     width: 100%;
-    height: 450px;
+    height: 550px;
 }
 
 .box_movement > h2{
