--- a/src/Components/moves/moves.css
+++ b/src/Components/moves/moves.css
@@ -33,7 +33,7 @@
 .move_detail{
     display: flex;
     position: fixed;
-    top: 20%;
+    top: 10%;
     flex-direction: column;
     width: 90%;
     padding: 1em;
